# TuyaOpen

./: AGENTS.md  CMakeLists.txt  README.md  README_zh.md
apps/tuya.ai/petoi_esp32c3_cube/: CMakeLists.txt  Kconfig  app_default.config
apps/tuya.ai/petoi_esp32c3_cube/config/: PETOI_ESP32C3_CUBE.config
apps/tuya.ai/petoi_esp32c3_cube/include/: app_chat_bot.h  tuya_config.h
apps/tuya.ai/petoi_esp32c3_cube/src/: app_chat_bot.c  tuya_main.c
docs/: analysis_esp32c3_ai_chatbot_memory_optimization.md  analysis_your_chat_bot_esp32c3_porting_assessment.md  esp32c3_memory_optimization_porting_guide.md  esp32c3项目收敛计划_d179d4de.plan.md  fix_heap_corruption_audio_afe_crash.md  hardware_config_structure.md  issue_build_conda_python_conflicts_with_esp_idf.md  issue_build_i2s_sg_i2s_gpio_cfg_undef_on_esp32c3.md  issue_build_idf_python_env_esp_idf_monitor_missing.md  issue_build_uart_gpio43_on_esp32c3.md  issue_link_lcd_st7789_spi_symbols_undefined.md  issue_link_mbedtls_hkdf_undefined.md  issue_runtime_ble_malloc_petoi_c3.md  issue_runtime_crash_afe_oom_no_psram.md  issue_runtime_crash_es8311_i2c_nack_and_assert.md  issue_runtime_esp32c3_softap_ble_coexist_crash.md  issue_runtime_log_flood_afe_not_init.md  issue_runtime_mp3dec_malloc_static_scratch.md  issue_runtime_oom_ai_player_malloc_failed.md  issue_runtime_petoi_esp32c3_daily_summary_2026-03-20.md  issue_runtime_petoi_esp32c3_daily_summary_2026-03-20_brief.md  petoi_esp32c3_cube_architecture_summary.md  petoi_esp32c3_cube_daily_summary_2026-03-30.md  petoi_esp32c3_cube_daily_summary_2026-03-31.md  product_id_config_analysis.md  (+5 more)
(+132 files in other folders)
